--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-6 m-auto">
-                <h1 class="my-4">Lets upload some stuff</h1>
+                <h1 class="my-4">Upload Images to Mongo</h1>
                 <form action="/upload" method="post" enctype="multipart/form-data">
                     <div class="custom-file mb-3">
                         <input type="file" class="custom-file-input" name="file" id="file1"
